# Tesis-Text-to-SQL

./: .gitignore  .gitmodules  README.md  REVISIONES.md
Arquitectura Text-to-SQL/: Abstract.tex  Bibliog.bib  Cap_1_Introduccion.tex  Cap_2_MarcoTeorico.tex  Cap_3_EstadoArte 2.tex  Cap_3_EstadoArte backup.tex  Cap_3_EstadoArte.tex  Cap_4_Propuesta.tex  Cap_4_Propuesta_v2.tex  Cap_5_Experimentos.tex  Cap_6_Resultados.tex  Resumen.tex  Tesis.synctex(busy)  Tesis.tex  abreviaturas.tex  conclusiones.tex  (+1 more)
Implementaciones/: .env.example  .gitignore  DECISIONS.md  README.md  pyproject.toml
Implementaciones/core/feedback/: __init__.py  classifier.py  descriptors.py  orchestrator.py
Implementaciones/core/ir/: __init__.py  compile.py  json_schema.py  lift.py  nodes.py  parse.py  schema.py
Implementaciones/core/verifier/: __init__.py  errors.py  static.py  structural.py
Implementaciones/corpus/adversarial/: pgq_decoys.json  spider_decoys.json
Implementaciones/docs/: architecture.md  experiments_index.md  ir_design.md  ir_json_format.md  lab_notebook.md
Implementaciones/evaluation/: _helpers.py  run_experiment_01.py  run_experiment_02.py  run_experiment_03.py  run_experiment_04.py  run_experiment_05.py  run_experiment_06.py  run_experiment_07.py  run_experiment_08.py  run_experiment_09.py
Implementaciones/notebooks/: 01_explore_spider.py  02_first_inference.py
Implementaciones/tests/: test_feedback_classifier.py  test_feedback_orchestrator.py  test_ir_core.py  test_ir_graph.py  test_ir_parse.py  test_ir_roundtrip.py  test_ir_verifier.py  test_verifier.py
(+6 files in other folders)
